@@ -3,23 +3,36 @@ package com.aster.yuno.index.excpetion;
 
 import com.aster.yuno.index.bo.ResultObj;
 import com.aster.yuno.index.enums.WebResultStatusEnum;
-import com.aster.yuno.index.exception.CaskRuntimeException;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.context.support.DefaultMessageSourceResolvable;
+import org.springframework.validation.BindException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
+
+import java.util.Objects;
 
 @RestControllerAdvice
 @Configuration
 public class GlobalException {
-
-
     @ExceptionHandler({Exception.class})
     public ResultObj<String> exception(Exception e) {
         e.printStackTrace();
-        if (e instanceof CaskRuntimeException) {
-            return ResultObj.error(WebResultStatusEnum.LOGIC_FORBID.getCode(), e.getMessage());
-        }
-        return ResultObj.error(WebResultStatusEnum.SYSTEM_UNKNOWN_ERROR.getCode(), e.getMessage());
+        //use class name instead <--enable-preview> to use "type pattern matching"
+        return switch (e.getClass().getName()) {
+            case ("org.springframework.web.bind.MethodArgumentNotValidException") -> {
+                var firstValidError = ((BindException) e).getBindingResult().getAllErrors().get(0);
+                var field = "argument";
+                var errorArg = Objects.requireNonNull(firstValidError.getArguments())[0];
+                if (errorArg instanceof DefaultMessageSourceResolvable messageArg) {
+                    field = messageArg.getCode();
+                }
+                yield ResultObj.error(WebResultStatusEnum.LOGIC_FORBID.getCode(),
+                        String.format("[%s] %s", field, firstValidError.getDefaultMessage()));
+            }
+            case "com.aster.yuno.index.exception.CaskRuntimeException" ->
+                    ResultObj.error(WebResultStatusEnum.LOGIC_FORBID.getCode(), e.getMessage());
+            default -> ResultObj.error(WebResultStatusEnum.SYSTEM_UNKNOWN_ERROR.getCode(), e.getMessage());
+        };
     }
 
 }
